fix paths for gh-pages

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 
 <head>
-  <link href='/css/reset.css' rel='stylesheet'/>
-  <link href='/css/styles.css' rel='stylesheet'/>
+  <link href='css/reset.css' rel='stylesheet'/>
+  <link href='css/styles.css' rel='stylesheet'/>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
   </span>
 </footer>
 </div>
-<script src='/js/jquery.js'></script>
-<script src='/js/google_news.js'></script>
+<script src='js/jquery.js'></script>
+<script src='js/google_news.js'></script>
 
 </body>
