--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <section class='results'></section>
 <footer>
   <span>From <a href='http://twitter.com/fivetanley'>fivetanley</a>.</span>
+  <span>CoffeeScript source is <a href="https://github.com/fivetanley/google-news-api">here</a>.
   <span>Colorscheme is totally stolen from
     <a href='http://www.colourlovers.com/palette/1930/cheer_up_emo_kid'>Cheer Up You Emo Kid</a>.
   </span>
