lol titles, who does that?

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <head>
+  <title>Up in your News, Googling your results</title>
   <link href='css/reset.css' rel='stylesheet'/>
   <link href='css/styles.css' rel='stylesheet'/>
 </head>
